--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@
     0px 2px 2px rgba(0, 0, 0, 0.12);
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --border-input: rgba(33, 33, 33, 0.2);
+  --soclink-mobile: #216dac;
   --mobile: 480px;
   --tablet: 768px;
   --desktop: 1200px;
@@ -181,8 +182,16 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
+.menu__container-item :hover, .menu__container-item :focus {
+  color: var(--brand-color);
+}
 .menu__container-item:not(:last-child) {
   margin-bottom: 32px;
+}
+
+.menu__container-link {
+  color: var(--brand-color-five);
+  transition: color var(--transition);
 }
 
 .menu__contacts {
@@ -194,8 +203,13 @@ img {
   font-size: 34px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  color: var(--brand-color-two);
+  transition: color var(--transition);
 }
 
+.menu__contacts-list :hover, .menu__contacts-list :focus {
+  color: var(--brand-color);
+}
 .menu__contacts-list:not(:last-child) {
   padding-bottom: 32px;
 }
@@ -212,6 +226,14 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.menu__socnet-item :hover, .menu__socnet-item :focus {
+  color: var(--soclink-mobile);
+}
+
+.menu__socnet-link {
+  color: var(--brand-color);
+  transition: color var(--transition);
 }
 
 .menu__container {
