--- a/sass/components/_heder_mobile.scss
+++ b/sass/components/_heder_mobile.scss
@@ -37,9 +37,19 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
 
+  & :hover,
+  & :focus {
+    color: var(--brand-color);
+  }
+
   &:not(:last-child) {
     margin-bottom: 32px;
   }
+}
+
+.menu__container-link {
+  color: var(--brand-color-five);
+  transition: color var(--transition);
 }
 
 .menu__contacts {
@@ -51,10 +61,20 @@
   font-size: 34px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+
+  color: var(--brand-color-two);
+  transition: color var(--transition);
 }
 
-.menu__contacts-list:not(:last-child) {
-  padding-bottom: 32px;
+.menu__contacts-list {
+  & :hover,
+  & :focus {
+    color: var(--brand-color);
+  }
+
+  &:not(:last-child) {
+    padding-bottom: 32px;
+  }
 }
 
 .menu__socnet-list {
@@ -69,4 +89,14 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+
+  & :hover,
+  & :focus {
+    color: var(--soclink-mobile);
+  }
+}
+
+.menu__socnet-link {
+  color: var(--brand-color);
+  transition: color var(--transition);
 }
