--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -16,7 +16,7 @@
     0px 2px 2px rgba(0, 0, 0, 0.12);
   --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   --border-input: rgba(33, 33, 33, 0.2);
-
+  --soclink-mobile: #216dac;
   //   breakpoints
   --mobile: 480px;
   --tablet: 768px;
