--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,6 +1,6 @@
 body {
-    font-family: "Roboto", sans-serif;
-    background-color: var(--brand-color-three);
+  font-family: "Roboto", sans-serif;
+  background-color: var(--brand-color-three);
 }
 
 h1,
@@ -8,22 +8,24 @@ h2,
 h3,
 h4,
 p {
-    margin-top: 0px;
-    margin-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 ul,
 ol {
-    list-style: none;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-left: 0px;
+  list-style: none;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
 }
 
 img {
-    display: block;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
 }
