--- a/sass/components/_heder_mobile.scss
+++ b/sass/components/_heder_mobile.scss
@@ -58,12 +58,19 @@
 
 .menu__contacts-link {
   font-weight: 500;
-  font-size: 34px;
+  font-size: 24px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-
   color: var(--brand-color-two);
   transition: color var(--transition);
+
+  @include mobile {
+    font-size: 34px;
+  }
+}
+
+.menu__contacts-mail {
+  font-size: 24px;
 }
 
 .menu__contacts-list {
@@ -85,10 +92,14 @@
   padding-left: 10px;
   padding-right: 10px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 12px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
+
+  @include mobile {
+    font-size: 18px;
+  }
 
   & :hover,
   & :focus {
