--- a/sass/layout/_solutions.scss
+++ b/sass/layout/_solutions.scss
@@ -1,49 +1,106 @@
 .solutions {
-    background: var(--brand-color-six);
-    color: var(--brand-color-three);
-    padding: 200px 0px;
+  background: var(--brand-color-six);
+  color: var(--brand-color-three);
+  padding: 118px 0px;
+  background-repeat: no-repeat;
+  background-position: center;
+  max-width: 480px;
+  // margin-left: auto;
+  // margin-right: auto;
+  background-size: cover;
+
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url("../../images/hero-480@1x.jpg");
+
+  @include retina-bgi {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../images/img.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
+      url("../../images/hero-480@2x.jpg");
+  }
+
+  @include mobile {
+    max-width: 797.99px;
+    padding: 118px 0px;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero-768@1x.jpg");
+
+    @include retina-bgi {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url("../../images/hero-768@2x.jpg");
+    }
+  }
+
+  @include tablet {
+    max-width: 1199.99px;
+    padding: 118px 0px;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero-768@1x.jpg");
+
+    @include retina-bgi {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url("../../images/hero-768@2x.jpg");
+    }
+  }
+  @include desktop {
     max-width: 1600px;
+    padding: 200px 0px;
     margin-left: auto;
     margin-right: auto;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url("../../images/hero-1600@1x.jpg");
+
+    @include retina-bgi {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url("../../images/hero-1600@2x.jpg");
+    }
+  }
 }
 
 .solutions__container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  @include tablet {
+    width: 390px;
+  }
+
+  @include desktop {
+    width: auto;
+  }
 }
 
 .solutions__title {
-    max-width: 696px;
-    margin-bottom: 30px;
-    font-weight: 900;
+  max-width: 696px;
+  margin-bottom: 30px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--brand-color-three);
+
+  @include desktop {
     font-size: 44px;
     line-height: 1.3;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--brand-color-three);
+  }
 }
 
 .solutions__button {
-    padding: 10px 32px;
-    background: var(--brand-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    color: var(--brand-color-three);
-    font-weight: 700;
-    line-height: 1.9;
-    transition: background-color var(--transition);
+  padding: 10px 32px;
+  background: var(--brand-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--brand-color-three);
+  font-weight: 700;
+  line-height: 1.9;
+  transition: background-color var(--transition);
 
-        &:hover,
-        &:focus {
-            background: var(--color-studio-btn);
-        }
+  &:hover,
+  &:focus {
+    background: var(--color-studio-btn);
+  }
 }
-
-
-
