--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -25,6 +25,9 @@
 }
 
 .work__link {
+  // display: flex;
+  // flex-direction: column;
+  // width: 100%;
   display: block;
   outline: none;
   transition: box-shadow var(--transition);
@@ -73,6 +76,7 @@
   padding: 20px 24px;
   border: 1px solid var(--color-portfolio);
   border-top: none;
+  // flex-grow: 1;
 }
 
 .works__title {
