--- a/sass/layout/_solutions.scss
+++ b/sass/layout/_solutions.scss
@@ -12,11 +12,11 @@
   margin-right: auto;
 
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url("../../images/hero-480@1x.jpg");
+    url("../images/hero-480@1x.jpg");
 
   @include retina-bgi {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("../../images/hero-480@2x.jpg");
+      url("../images/hero-480@2x.jpg");
   }
 
   @include mobile {
@@ -24,11 +24,11 @@
     padding: 118px 0px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("../../images/hero-768@1x.jpg");
+      url("../images/hero-768@1x.jpg");
 
     @include retina-bgi {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../../images/hero-768@2x.jpg");
+        url("../images/hero-768@2x.jpg");
     }
   }
 
@@ -37,11 +37,11 @@
     padding: 118px 0px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url("../../images/hero-768@1x.jpg");
+      url("../images/hero-768@1x.jpg");
 
     @include retina-bgi {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../../images/hero-768@2x.jpg");
+        url("../images/hero-768@2x.jpg");
     }
   }
   @include desktop {
