--- a/sass/components/_menu-container.scss
+++ b/sass/components/_menu-container.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
+  padding: 48px 40px 48px 40px;
   background-color: var(--brand-color-three);
   z-index: 999;
   transform: translateX(100%);
