--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -6,9 +6,9 @@
 }
 
 .work__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  // display: flex;
+  // flex-wrap: wrap;
+  // justify-content: center;
   width: 100%;
 
   @include mobile {
@@ -16,19 +16,24 @@
   }
 
   @include tablet {
-    width: 354px;
+    // width: 354px;
+    flex-basis: calc((100% - 30px) / 2);
   }
 
   @include desktop {
     width: 370px;
+    flex-basis: calc((100% - 60px) / 3);
   }
 }
 
 .work__link {
-  // display: flex;
-  // flex-direction: column;
-  // width: 100%;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+
+  // display: block;
   outline: none;
   transition: box-shadow var(--transition);
 
@@ -45,9 +50,9 @@
 }
 
 .work__covertext {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   position: absolute;
   top: 0;
   left: 0;
@@ -64,8 +69,12 @@
 }
 
 .work__text {
-  width: 322px;
-  height: 168px;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  // width: 322px;
+  // height: 168px;
+
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.03em;
@@ -76,7 +85,8 @@
   padding: 20px 24px;
   border: 1px solid var(--color-portfolio);
   border-top: none;
-  // flex-grow: 1;
+
+  flex-grow: 1;
 }
 
 .works__title {
