--- a/sass/layout/_qualities.scss
+++ b/sass/layout/_qualities.scss
@@ -43,12 +43,17 @@
 }
 
 .qualities__subtitle {
+  display: flex;
+  justify-content: center;
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--brand-color-five);
+
+  @include tablet {
+    display: block;
+  }
 }
 
 .qualities__text {
