--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,22 +1,17 @@
 .works {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: stretch;
   gap: 30px;
 }
 
 .work__list {
-  // display: flex;
-  // flex-wrap: wrap;
-  // justify-content: center;
   width: 100%;
-
   @include mobile {
     width: 450px;
   }
 
   @include tablet {
-    // width: 354px;
     flex-basis: calc((100% - 30px) / 2);
   }
 
@@ -30,10 +25,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-
-  // display: block;
   outline: none;
   transition: box-shadow var(--transition);
 
@@ -50,9 +44,6 @@
 }
 
 .work__covertext {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
   position: absolute;
   top: 0;
   left: 0;
@@ -72,9 +63,6 @@
   width: 100%;
   height: 100%;
   padding: 63px 24px;
-  // width: 322px;
-  // height: 168px;
-
   font-size: 18px;
   line-height: 1.5;
   letter-spacing: 0.03em;
@@ -85,7 +73,6 @@
   padding: 20px 24px;
   border: 1px solid var(--color-portfolio);
   border-top: none;
-
   flex-grow: 1;
 }
 
